add jvmArgs to Test tasks in gradle